--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,9 +1,19 @@
 <div class="container">
     <div class="row">
-        
+
         <div class="col text-right">
             <span>Logged in with user: {{username}}</span>
             <a href="./logout"> Logout</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"><path d="M7.127 22.562l-7.127 1.438 1.438-7.128 5.689 5.69zm1.414-1.414l11.228-11.225-5.69-5.692-11.227 11.227 5.689 5.69zm9.768-21.148l-2.816 2.817 5.691 5.691 2.816-2.819-5.691-5.689z"/></svg>
+                </div>
+                <button type="button" class=" btn btn-primary" onclick="window.location.href = '/new_post';">New Post</button>
+            </div>
         </div>
     </div>
 </div>
