--- a/views/postlist.handlebars
+++ b/views/postlist.handlebars
@@ -5,7 +5,7 @@
             <span>Author: {{author}}</span>
         </div>
         <div class="col text-right">
-            <span class="font-italic">{{date}}</span>
+            <span class="font-italic">{{formatDate created_at}}</span>
         </div>
     </div>
     <div class="row pt-2">
