--- a/views/postlist.handlebars
+++ b/views/postlist.handlebars
@@ -1,22 +1,12 @@
+<div class="container mb-3 border shadow">
 {{#each postList}}
-<div class="container mb-3 p3 border shadow">
-    <div class="row border-bottom">
+    <div class="row border-bottom p-3">
         <div class="col text-left">
-            <span>Author: {{author}}</span>
+            <a href="/post/{{id}}"> {{title}} (by {{author}})</a>
         </div>
         <div class="col text-right">
             <span class="font-italic">{{formatDate created_at}}</span>
         </div>
     </div>
-    <div class="row pt-2">
-        <div class="col text-center">
-            <h3>{{title}}</h3>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col text-justify">
-            {{content}}
-        </div>
-    </div>
-</div>
 {{/each}}
+</div>
