--- a/views/new_post.handlebars
+++ b/views/new_post.handlebars
@@ -9,6 +9,11 @@
                         placeholder="Lorem Ipsum" short="Title" required>
                 </div>
                 <div class="form-group">
+                    <label for="postSlug">Slug</label>
+                    <input type="text" class="form-control" id="postSlug" name="postSlug" aria-describedby="postSlug"
+                        placeholder="lorem-ipsum" short="Slug" required>
+                </div>
+                <div class="form-group">
                     <label for="postContent">Content</label>
                     <textarea class="form-control" id="postContent" placeholder="Lorem ipsum dolor sit amet"
                         name="postContent" short="Content" required></textarea>
