added admin post list

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -14,7 +14,7 @@
     </div>
     <div class="row p-3">
         <div class="col text-justify">
-            {{post.content}}
+            {{{post.content}}}
         </div>
     </div>
 </div>
