--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,13 +6,29 @@
             <a href="./logout"> Logout</a>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
+    <div class="row justify-content-start">
+        <div class="col-4 mx-auto">
             <div class="card" style="width: 18rem;">
                 <div class="card-body text-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"><path d="M7.127 22.562l-7.127 1.438 1.438-7.128 5.689 5.69zm1.414-1.414l11.228-11.225-5.69-5.692-11.227 11.227 5.689 5.69zm9.768-21.148l-2.816 2.817 5.691 5.691 2.816-2.819-5.691-5.689z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24">
+                        <path
+                            d="M7.127 22.562l-7.127 1.438 1.438-7.128 5.689 5.69zm1.414-1.414l11.228-11.225-5.69-5.692-11.227 11.227 5.689 5.69zm9.768-21.148l-2.816 2.817 5.691 5.691 2.816-2.819-5.691-5.689z" />
+                    </svg>
                 </div>
-                <button type="button" class=" btn btn-primary" onclick="window.location.href = '/new_post';">New Post</button>
+                <a class="btn btn-primary" href='/new_post'>New
+                    Post</a>
+            </div>
+        </div>
+        <div class="col-4 mx-auto">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body text-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24">
+                        <path
+                            d="M4 22h-4v-4h4v4zm0-12h-4v4h4v-4zm0-8h-4v4h4v-4zm3 0v4h17v-4h-17zm0 12h17v-4h-17v4zm0 8h17v-4h-17v4z" />
+                    </svg>
+                </div>
+                <a class="btn btn-primary" href='/admin/post_list'>Post
+                    List</a>
             </div>
         </div>
     </div>
