save as draft ver1

--- a/views/edit_post.handlebars
+++ b/views/edit_post.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Edit Post</h1>
+            <h1>Edit {{#unless publish}}Draft {{/unless}}Post</h1>
             <form class="needs-validation" action="/edit_post/{{post.id}}" method="POST" id="newPostForm" novalidate>
                 <div class="form-group">
                     <label for="postTitle">Title</label>
@@ -18,16 +18,19 @@
                     <textarea class="form-control" id="postContent" placeholder="Lorem ipsum dolor sit amet"
                         name="postContent" short="Content" required>{{post.content}}</textarea>
                 </div>
+                <input type="hidden" name="publish" id="publish" value="{{post.publish}}">
                 <div class="d-flex justify-content-between">
-                    <a class="btn btn-outline-primary" href = '/admin/post_list'>Cancel</a>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <a class="btn btn-outline-primary" href='/admin/post_list'>Cancel</a>
+                    <button type="submit" class="btn btn-primary" id="draftButton">Save as draft</button>
+                    <button type="submit" class="btn btn-primary" id="publishButton">Publish</button>
                 </div>
-                <div class="alert alert-danger mt-3 {{#unless validation}}d-none{{/unless}}" role="alert" id="validationErrorContainer">
+                <div class="alert alert-danger mt-3 {{#unless validation}}d-none{{/unless}}" role="alert"
+                    id="validationErrorContainer">
                     {{#if validation}}
                     <ul class="m-0">
-                      {{#each validation}}
+                        {{#each validation}}
                         <li>{{this}}</li>
-                      {{/each}}
+                        {{/each}}
                     </ul>
                     {{/if}}
                 </div>
@@ -39,14 +42,19 @@
 
     const newPostForm = document.getElementById('newPostForm');
 
+    const publish = document.getElementById('publish');
+
     const validationError = document.getElementById('validationErrorContainer');
 
-     newPostForm.addEventListener('submit', function (event) {
-        if (newPostForm.checkValidity() === false) {
-            event.preventDefault();
-            event.stopPropagation();
-            showValidationError(newPostForm)
+    newPostForm.addEventListener('submit', function (event) {
+        if (isPublish()) {
+            if (newPostForm.checkValidity() === false) {
+                event.preventDefault();
+                event.stopPropagation();
+                showValidationError(newPostForm)
+            }
         }
+        setPublish();
     });
 
     function showValidationError(form) {
@@ -64,4 +72,15 @@
             console.log(missingInputs);
         }
     }
+
+    function isPublish() {
+        return document.activeElement.id == "publishButton"
+    }
+
+    function setPublish() {
+        publish.value = isPublish();
+    }
+
+
+
 </script>
