--- a/views/new_post.handlebars
+++ b/views/new_post.handlebars
@@ -48,12 +48,10 @@
     const validationError = document.getElementById('validationErrorContainer');
 
     newPostForm.addEventListener('submit', function (event) {
-        if (isPublish()) {
-            if (newPostForm.checkValidity() === false) {
-                event.preventDefault();
-                event.stopPropagation();
-                showValidationError(newPostForm)
-            }
+        if (newPostForm.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+            showValidationError(newPostForm)
         }
         setPublish();
     });
@@ -74,12 +72,8 @@
         }
     }
 
-    function isPublish(){
-        return document.activeElement.id == "publishButton"
-    }
-
-    function setPublish(){
-            publish.value = isPublish();
+    function setPublish() {
+        publish.value = document.activeElement.id == "publishButton"
     }
 
 
